--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,341 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+!!! 5
+html
+  head
+    meta(charset='UTF-8')
+    title LandingSpace
+    meta(name='description', content='')
+    meta(name='keywords', content='')
+    //
+       JS 
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+    //if (gte IE 6)&(lte IE 8)
+      script(type='text/javascript', src='js/selectivizr-min.js')
+    //
+       CSS 
+    link(rel='stylesheet', href='css/reset.css')
+    link(rel='stylesheet', href='css/style.css')
+    link#colortheme(rel='stylesheet', href='css/blue.css')
+    //if lt IE 9
+      link(rel='stylesheet', type='text/css', href='css/ie.css')
+    //
+       Google Web Font 
+    link(href='http://fonts.googleapis.com/css?family=Anton&subset=latin-ext,latin', rel='stylesheet', type='text/css')
+    style(type='text/css')
+      #iphone {
+      background:url(img/white_iphone5.png);
+      }
+  body
+    #wrapper
+      #header
+        #head
+          #logo
+            img(src='img/logo.png', alt='LandingSpace')
+          //
+              #logo end 
+        //
+           #head end 
+        .middle
+          #iphone
+            #iphone_container
+              ul#iphoneul
+                li#phoneimg0.images
+                  img(src='img/02.png')
+                li#phoneimg1.images
+                  img(src='img/03.png')
+                li#phoneimg2.images
+                  img(src='img/01.png')
+                li#phoneimg3.images
+                  img(src='img/02.png')
+          //
+             #iphone end 
+          #div
+            #text
+              ul#textlength
+                li#div0
+                  h1
+                    | Present your application on
+                    br
+                    span
+                      | this great
+                      br
+                      | place
+                li#div1.display
+                  h1
+                    | Enjoy with us pleasure and success.
+                    br
+                    span Be cool
+                li#div2.display
+                  h1
+                    | LandingSpace is the place for a
+                    span start of your app
+                li#div3.display
+                  h1
+                    | Present your application on
+                    br
+                    span
+                      | this great
+                      br
+                      | place
+            //
+               #text end 
+            #store
+              ul
+                li#div0.google
+                  a(href='#', title='')
+                li#div1.storeicon.apple
+                  a(href='#', title='')
+                li#div2.storeicon.google
+                  a(href='#', title='')
+                li#div3.storeicon.apple
+                  a(href='#', title='')
+            //
+               .store end 
+          //
+             #div end 
+        //
+           .middle end 
+      //
+         #header end 
+      #middle
+        #table.class
+        //
+           #table end 
+        .inner.inner-margin_top
+          .drop-shadow
+            .ribbon
+              h3 New update comming soon
+          //
+             .drop-shadow end 
+          .progressbar
+            .bar-elapsed(style='width: 296px;')
+            span.indicator(style='margin-left: 277px;') 37%
+          //
+             .progressbar end 
+          .drop-shadow
+          //
+             .drop-shadow end 
+          .facts
+            .icon
+              span @
+            h2 easy to set up
+            p
+              | Lorem ipsum dolorg sit amettfh, consectetuer
+              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+              | ipsum quia dolor sit amet, consectetur, adipisci velit.
+          //
+             .facts end 
+          .facts
+            .icon
+              span N
+            //
+               .icon end 
+            h2 time saving
+            p
+              | Lorem ipsum dolorg sit amettfh, consectetuer
+              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui
+              | dolorem ipsum quia dolor sit amet, consectetur, adipisci velit
+          //
+             .facts end 
+          .facts.last
+            .icon
+              span 0
+            h2 near to you
+            p
+              | Lorem ipsum dolorg sit amettfh, consectetuer
+              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+              | ipsum quia dolor sit amet, consectetur, adipisci velit
+          //
+             .facts end 
+          .facts-big
+            .img
+              img(src='img/brown/brown_splash.png')
+            h2 perfect choice of color
+            p
+              | Lorem ipsum dolorg sit amettfh, consectetuer
+              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+              | ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolorg sit amettfh, consectetuer
+              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+              | ipsum quia dolor sit amet, consectetur, adipisci velit
+          //
+             .facts-big end 
+          .drop-shadow
+          //
+             .drop-shadow end 
+          p.quote
+            | Lorem ipsum dolorg sit amettfh, consectetuer
+            | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+            | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+            | ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolorg sit amettfh, consectetuer
+            | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
+            | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
+            | ipsum quia dolor sit amet, consectetur, adipisci velit
+          .drop-shadow
+          //
+             .drop-shadow end 
+        //
+           .inner end 
+      //
+         #middle end 
+      .other-stuff-ribbon
+        .line.color-first
+          .other-stuff-up
+            span Other
+        .other-stuff
+          .shelf
+            ul
+              li
+                a(href='#')
+                  img(src='img/1.png')
+              li
+                a(href='#')
+                  img(src='img/2.png')
+              li
+                a(href='#')
+                  img(src='img/3.png')
+              li
+                a(href='#')
+                  img(src='img/4.png')
+              li
+                a(href='#')
+                  img(src='img/5.png')
+              li
+                a(href='#')
+                  img(src='img/6.png')
+          //
+             .shelf 
+        //
+           .other-stuff end 
+        .line.color-second
+          .other-stuff-down
+            span Stuff
+      .inner
+        .subscribe
+          form
+            input(type='text', value='Subscribe to our newsletter for insightful tips & discounts', name='email', onblur='if (this.value == \'\') {this.value = \'Subscribe to our newsletter for insightful tips & discounts\';}', onfocus='if (this.value == \'Subscribe to our newsletter for insightful tips & discounts\') {this.value = \'\';}')
+            input(type='submit', value='Subscribe')
+        //
+           .subscribe end 
+        .about-us
+          p.margin
+            | Lorem ipsum dolorg sit amettfh, consectetuer adipiscing elit, sed
+            | diam nonummyy nibh euismoed tinciduntt a utd laoreeet dolore magna
+            | aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+            | exercci manna tatcion ullamcorper suscipit lobortis nisl utae g aliquipt
+            | exe ea commodo consequatq. Duis autem vel eum iriure dolor in hendrerit
+        //
+           .about-us end 
+        .contact-us
+        //
+           .contact-us end 
+        .social
+          a(href='http://www.facebook.com/chillipear', target='_blank')
+            img(src='img/facebook.png')
+          a(href='https://twitter.com/chillipear', target='_blank')
+            img(src='img/twitter.png')
+          a(href='#', target='_blank')
+            img(src='img/vimeo.png')
+          a(href='#', target='_blank')
+            img(src='img/youtube.png')
+          a(href='#', target='_blank')
+            img(src='img/google.png')
+        //
+           .social end 
+      //
+         .inner end 
+      #footer
+      //
+         #footer end 
+      #ray_down
+      //
+         #ray_down end 
+    //
+       #wrapper end 
+    #contact-us-overlay
+      #conact-container
+        .close
+          //
+             the close button 
+        //
+           .close end 
+        .contact-us-title
+        //
+           .contact-us-title end 
+        form#form
+          input#name(type='text', value='your name', name='name', onblur='if (this.value == \'\') {this.value = \'your name\';}', onfocus='if (this.value == \'your name\') {this.value = \'\';}')
+          input#email(type='text', value='your email', name='email', onblur='if (this.value == \'\') {this.value = \'your email\';}', onfocus='if (this.value == \'your email\') {this.value = \'\';}')
+          input#subject(type='text', value='subject', name='subject', onblur='if (this.value == \'\') {this.value = \'subject\';}', onfocus='if (this.value == \'subject\') {this.value = \'\';}')
+          textarea#message(name='message', onblur='if (this.value == \'\') {this.value = \'message\';}', onfocus='if (this.value == \'message\') {this.value = \'\';}') message
+          input(type='submit', value='Send')
+    script(type='text/javascript')
+      $(document).ready(function(){
+      // starts the spinning
+      setTimeout(function(){
+      $('html').addClass("loaded");
+      }, 1);
+      // contact us
+      $('.contact-us').on('click', function(){
+      $('#contact-us-overlay').slideDown();
+      });
+      // close contact us
+      $('.close').on('click', function(){
+      $('#contact-us-overlay').slideUp();
+      });
+      // open the shelf
+      $('.line').on('click', function(){
+      var text = $('.color-second span').text();
+      if (text == "close") {
+      $('.other-stuff').slideUp();
+      $('.color-second span').text('stuff');
+      }else {
+      $('.other-stuff').slideDown();
+      $('.color-second span').text('close');
+      }
+      });
+      // Send msg from contact from
+      }); // document ready end
+      $(function() {
+      // for iphone slider
+      var iphoneLength = $('#iphoneul li').length;
+      var timerPhone = setInterval( phoneSlider, 5000);
+      var counter2 = 0;
+      function phoneSlider() {
+      if (counter2 ==0) { counter2++; return; }
+      $('#phoneimg0').hide();
+      $('li','#iphoneul')
+      .stop()
+      .animate({
+      opacity:0
+      }, 100)
+      .filter( function() { return this.id.match('phoneimg' + counter2); })
+      .animate({
+      opacity:1
+      }, 300)
+      counter2 == iphoneLength-1? counter2 = 0 : counter2++;
+      }
+      var textLength = $('#textlength li').length;
+      var timer = setInterval( showDiv, 5000);
+      var counter = 0;
+      function showDiv() {
+      if (counter ==0) { counter++; return; }
+      $('#div0').hide();
+      $('li','#div')
+      .stop()
+      .animate({
+      opacity:0
+      }, 100)
+      .hide()
+      .filter( function() { return this.id.match('div' + counter); })
+      .animate({
+      opacity:1,
+      marginLeft:0
+      }, 300)
+      .show();
+      $('.storeicon').css('margin-left','-400px');
+      counter == textLength-1? counter = 0 : counter++;
+      }
+      });
