fixed wooden table

--- a/views/index.jade
+++ b/views/index.jade
@@ -97,7 +97,7 @@ html
       //
          #header end 
       #middle
-        #table.class
+        #table.wooden-table
         //
            #table end 
         .inner.inner-margin_top
