photoshopped out the hand and flipped iphone to landscape on website

--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ html
     link(href='http://fonts.googleapis.com/css?family=Anton&subset=latin-ext,latin', rel='stylesheet', type='text/css')
     style(type='text/css')
       #iphone {
-      background:url(img/white_iphone5.png);
+      background:url(img/white_iphone5_nohand.png);
       }
   body
     #wrapper
@@ -53,17 +53,17 @@ html
               ul#textlength
                 li#div0
                   h1
-                    | Present your application on
+                    | ALEX FROST
                     br
                     span
-                      | this great
+                      | IS A
                       br
-                      | place
+                      | GOOBATRON
                 li#div1.display
                   h1
-                    | Enjoy with us pleasure and success.
+                    | PENIS
                     br
-                    span Be cool
+                    span Vagina
                 li#div2.display
                   h1
                     | LandingSpace is the place for a
