added feature icons and descriptions to website

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ html
        CSS 
     link(rel='stylesheet', href='css/reset.css')
     link(rel='stylesheet', href='css/style.css')
-    link#colortheme(rel='stylesheet', href='css/blue.css')
+    link#colortheme(rel='stylesheet', href='css/green.css')
     //if lt IE 9
       link(rel='stylesheet', type='text/css', href='css/ie.css')
     //
@@ -51,17 +51,17 @@ html
           #div
             #text
               ul#textlength
-                li#div0
+                li#div0.display
                   h1
-                    | ALEX FROST
+                    | WELCOME TO CRITTER CAMP
                     br
                     span
-                      | IS A
+                      | the games are
                       br
-                      | GOOBATRON
+                      | about to begin!
                 li#div1.display
                   h1
-                    | PENIS
+                    | Penis
                     br
                     span Vagina
                 li#div2.display
@@ -116,13 +116,15 @@ html
              .drop-shadow end 
           .facts
             .icon
-              span @
-            h2 easy to set up
+              span ,
+            h2 challenge friends
             p
-              | Lorem ipsum dolorg sit amettfh, consectetuer
-              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-              | ipsum quia dolor sit amet, consectetur, adipisci velit.
+              | Find your friends and play against them!
+              | Send friend requests, keep track of who's online and 
+              | organize a mini-game among friends. Or see how
+              | you fare against other gamers from around the globe.
+              | Pit your critter versus their's for a chance 
+              | at camp bragging rights.
           //
              .facts end 
           .facts
@@ -130,50 +132,44 @@ html
               span N
             //
                .icon end 
-            h2 time saving
+            h2 compete in real time
             p
-              | Lorem ipsum dolorg sit amettfh, consectetuer
-              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui
-              | dolorem ipsum quia dolor sit amet, consectetur, adipisci velit
+              | No more waiting for turns! Turn-based games can drag on and
+              | on. Instead of waiting on your opponent to make a move, 
+              | you'll be competing in real-time. 
+              | That means you'll be a part of intense, fast-paced games. 
           //
              .facts end 
           .facts.last
             .icon
-              span 0
-            h2 near to you
+              span B
+            h2 level up
             p
-              | Lorem ipsum dolorg sit amettfh, consectetuer
-              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-              | ipsum quia dolor sit amet, consectetur, adipisci velit
+              | Keep winning your camp competitions? You'll be 
+              | rewarded! Every time you play a mini-game, you'll 
+              | gain experience and gold based on your performance.
+              | Obtain new critter characters as you level up. If 
+              | you're really good, maybe you can even make it into the
+              | Critter Camp Hall of Fame.
           //
              .facts end 
           .facts-big
             .img
               img(src='img/brown/brown_splash.png')
-            h2 perfect choice of color
+            h2 discover new camp mini-games
             p
-              | Lorem ipsum dolorg sit amettfh, consectetuer
-              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-              | ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolorg sit amettfh, consectetuer
-              | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-              | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-              | ipsum quia dolor sit amet, consectetur, adipisci velit
+              | Playing the same camp games over and over
+              | would be boring. That's why you can vote on which camp
+              | game you'd like to play so you'll get to be a part
+              | of a variety of competitions. We'll also constantly 
+              | add new games to keep the camp experience fresh.
           //
              .facts-big end 
           .drop-shadow
           //
              .drop-shadow end 
           p.quote
-            | Lorem ipsum dolorg sit amettfh, consectetuer
-            | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-            | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-            | ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolorg sit amettfh, consectetuer
-            | adipiscing elit, sed diam nonummyy nibh euismoed tinciduntt a utd
-            | laoreeet dolore magna aliquam erat volutpat. Neque porro quisquam est qui dolorem
-            | ipsum quia dolor sit amet, consectetur, adipisci velit
+            | I like dicks! - Kevin Tseng
           .drop-shadow
           //
              .drop-shadow end 
