added pigup to website

--- a/views/index.jade
+++ b/views/index.jade
@@ -155,7 +155,7 @@ html
              .facts end 
           .facts-big
             .img
-              img(src='img/brown/brown_splash.png')
+              img(src='img/pigUp.png')
             h2 discover new camp mini-games
             p
               | Playing the same camp games over and over
