cleaned up index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,24 +5,21 @@ html
     title LandingSpace
     meta(name='description', content='')
     meta(name='keywords', content='')
-    //
-       JS 
+    // JS 
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     //if (gte IE 6)&(lte IE 8)
       script(type='text/javascript', src='js/selectivizr-min.js')
-    //
-       CSS 
+    // CSS 
     link(rel='stylesheet', href='css/reset.css')
     link(rel='stylesheet', href='css/style.css')
     link#colortheme(rel='stylesheet', href='css/green.css')
     //if lt IE 9
       link(rel='stylesheet', type='text/css', href='css/ie.css')
-    //
-       Google Web Font 
+    // Google Web Font 
     link(href='http://fonts.googleapis.com/css?family=Anton&subset=latin-ext,latin', rel='stylesheet', type='text/css')
     style(type='text/css')
       #iphone {
-      background:url(img/white_iphone5_nohand.png);
+        background:url(img/white_iphone5_nohand.png);
       }
   body
     #wrapper
@@ -30,10 +27,6 @@ html
         #head
           #logo
             img(src='img/logo.png', alt='LandingSpace')
-          //
-              #logo end 
-        //
-           #head end 
         .middle
           #iphone
             #iphone_container
@@ -46,8 +39,6 @@ html
                   img(src='img/01.png')
                 li#phoneimg3.images
                   img(src='img/02.png')
-          //
-             #iphone end 
           #div
             #text
               ul#textlength
@@ -76,8 +67,6 @@ html
                       | this great
                       br
                       | place
-            //
-               #text end 
             #store
               ul
                 li#div0.google
@@ -88,32 +77,13 @@ html
                   a(href='#', title='')
                 li#div3.storeicon.apple
                   a(href='#', title='')
-            //
-               .store end 
-          //
-             #div end 
-        //
-           .middle end 
-      //
-         #header end 
       #middle
         #table.wooden-table
-        //
-           #table end 
         .inner.inner-margin_top
           .drop-shadow
             .ribbon
               h3 New update comming soon
-          //
-             .drop-shadow end 
-          .progressbar
-            .bar-elapsed(style='width: 296px;')
-            span.indicator(style='margin-left: 277px;') 37%
-          //
-             .progressbar end 
           .drop-shadow
-          //
-             .drop-shadow end 
           .facts
             .icon
               span ,
@@ -125,21 +95,15 @@ html
               | you fare against other gamers from around the globe.
               | Pit your critter versus their's for a chance 
               | at camp bragging rights.
-          //
-             .facts end 
           .facts
             .icon
               span N
-            //
-               .icon end 
             h2 compete in real time
             p
               | No more waiting for turns! Turn-based games can drag on and
               | on. Instead of waiting on your opponent to make a move, 
               | you'll be competing in real-time. 
               | That means you'll be a part of intense, fast-paced games. 
-          //
-             .facts end 
           .facts.last
             .icon
               span B
@@ -151,8 +115,6 @@ html
               | Obtain new critter characters as you level up. If 
               | you're really good, maybe you can even make it into the
               | Critter Camp Hall of Fame.
-          //
-             .facts end 
           .facts-big
             .img
               img(src='img/pigUp.png')
@@ -163,20 +125,10 @@ html
               | game you'd like to play so you'll get to be a part
               | of a variety of competitions. We'll also constantly 
               | add new games to keep the camp experience fresh.
-          //
-             .facts-big end 
           .drop-shadow
-          //
-             .drop-shadow end 
           p.quote
-            | I like dicks! - Kevin Tseng
+            | Great team. Great idea. I invested heavily in this product. -Eric Shyong
           .drop-shadow
-          //
-             .drop-shadow end 
-        //
-           .inner end 
-      //
-         #middle end 
       .other-stuff-ribbon
         .line.color-first
           .other-stuff-up
@@ -202,10 +154,6 @@ html
               li
                 a(href='#')
                   img(src='img/6.png')
-          //
-             .shelf 
-        //
-           .other-stuff end 
         .line.color-second
           .other-stuff-down
             span Stuff
@@ -214,8 +162,6 @@ html
           form
             input(type='text', value='Subscribe to our newsletter for insightful tips & discounts', name='email', onblur='if (this.value == \'\') {this.value = \'Subscribe to our newsletter for insightful tips & discounts\';}', onfocus='if (this.value == \'Subscribe to our newsletter for insightful tips & discounts\') {this.value = \'\';}')
             input(type='submit', value='Subscribe')
-        //
-           .subscribe end 
         .about-us
           p.margin
             | Lorem ipsum dolorg sit amettfh, consectetuer adipiscing elit, sed
@@ -223,11 +169,7 @@ html
             | aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
             | exercci manna tatcion ullamcorper suscipit lobortis nisl utae g aliquipt
             | exe ea commodo consequatq. Duis autem vel eum iriure dolor in hendrerit
-        //
-           .about-us end 
         .contact-us
-        //
-           .contact-us end 
         .social
           a(href='http://www.facebook.com/chillipear', target='_blank')
             img(src='img/facebook.png')
@@ -239,28 +181,12 @@ html
             img(src='img/youtube.png')
           a(href='#', target='_blank')
             img(src='img/google.png')
-        //
-           .social end 
-      //
-         .inner end 
       #footer
-      //
-         #footer end 
       #ray_down
-      //
-         #ray_down end 
-    //
-       #wrapper end 
     #contact-us-overlay
       #conact-container
         .close
-          //
-             the close button 
-        //
-           .close end 
         .contact-us-title
-        //
-           .contact-us-title end 
         form#form
           input#name(type='text', value='your name', name='name', onblur='if (this.value == \'\') {this.value = \'your name\';}', onfocus='if (this.value == \'your name\') {this.value = \'\';}')
           input#email(type='text', value='your email', name='email', onblur='if (this.value == \'\') {this.value = \'your email\';}', onfocus='if (this.value == \'your email\') {this.value = \'\';}')
@@ -268,70 +194,68 @@ html
           textarea#message(name='message', onblur='if (this.value == \'\') {this.value = \'message\';}', onfocus='if (this.value == \'message\') {this.value = \'\';}') message
           input(type='submit', value='Send')
     script(type='text/javascript')
-      $(document).ready(function(){
-      // starts the spinning
-      setTimeout(function(){
-      $('html').addClass("loaded");
-      }, 1);
-      // contact us
-      $('.contact-us').on('click', function(){
-      $('#contact-us-overlay').slideDown();
-      });
-      // close contact us
-      $('.close').on('click', function(){
-      $('#contact-us-overlay').slideUp();
-      });
-      // open the shelf
-      $('.line').on('click', function(){
-      var text = $('.color-second span').text();
-      if (text == "close") {
-      $('.other-stuff').slideUp();
-      $('.color-second span').text('stuff');
-      }else {
-      $('.other-stuff').slideDown();
-      $('.color-second span').text('close');
-      }
-      });
-      // Send msg from contact from
+      $(document).ready(function() {
+        // starts the spinning
+        setTimeout(function() {
+          $('html').addClass("loaded");
+        }, 1);
+        
+        // contact us
+        $('.contact-us').on('click', function() {
+          $('#contact-us-overlay').slideDown();
+        });
+        
+        // close contact us
+        $('.close').on('click', function() {
+          $('#contact-us-overlay').slideUp();
+        });
+        
+        // open the shelf
+        $('.line').on('click', function() {
+          var text = $('.color-second span').text();
+          if(text == "close") {
+            $('.other-stuff').slideUp();
+            $('.color-second span').text('stuff');
+          } else {
+            $('.other-stuff').slideDown();
+            $('.color-second span').text('close');
+          }
+        });
+        // Send msg from contact from
       }); // document ready end
+      
       $(function() {
-      // for iphone slider
-      var iphoneLength = $('#iphoneul li').length;
-      var timerPhone = setInterval( phoneSlider, 5000);
-      var counter2 = 0;
-      function phoneSlider() {
-      if (counter2 ==0) { counter2++; return; }
-      $('#phoneimg0').hide();
-      $('li','#iphoneul')
-      .stop()
-      .animate({
-      opacity:0
-      }, 100)
-      .filter( function() { return this.id.match('phoneimg' + counter2); })
-      .animate({
-      opacity:1
-      }, 300)
-      counter2 == iphoneLength-1? counter2 = 0 : counter2++;
-      }
-      var textLength = $('#textlength li').length;
-      var timer = setInterval( showDiv, 5000);
-      var counter = 0;
-      function showDiv() {
-      if (counter ==0) { counter++; return; }
-      $('#div0').hide();
-      $('li','#div')
-      .stop()
-      .animate({
-      opacity:0
-      }, 100)
-      .hide()
-      .filter( function() { return this.id.match('div' + counter); })
-      .animate({
-      opacity:1,
-      marginLeft:0
-      }, 300)
-      .show();
-      $('.storeicon').css('margin-left','-400px');
-      counter == textLength-1? counter = 0 : counter++;
-      }
+        // for iphone slider
+        var iphoneLength = $('#iphoneul li').length;
+        var timerPhone = setInterval( phoneSlider, 5000);
+        var counter2 = 0;
+
+        function phoneSlider() {
+          if(counter2 ==0) { counter2++; return; }
+          $('#phoneimg0').hide();
+          $('li','#iphoneul')
+            .stop()
+            .animate({ opacity: 0 }, 100)
+            .filter(function() { return this.id.match('phoneimg' + counter2); })
+            .animate({ opacity: 1 }, 300);
+          counter2 == iphoneLength - 1 ? counter2 = 0 : counter2++;
+        }
+
+        var textLength = $('#textlength li').length;
+        var timer = setInterval(showDiv, 5000);
+        var counter = 0;
+
+        function showDiv() {
+          if (counter ==0) { counter++; return; }
+          $('#div0').hide();
+          $('li','#div')
+            .stop()
+            .animate({ opacity: 0 }, 100)
+            .hide()
+            .filter(function() { return this.id.match('div' + counter); })
+            .animate({ opacity: 1, marginLeft: 0 }, 300)
+            .show();
+          $('.storeicon').css('margin-left', '-400px');
+          counter == textLength - 1 ? counter = 0 : counter++;
+        }
       });
