--- a/public/css/green.css
+++ b/public/css/green.css
@@ -30,11 +30,17 @@
     }
 
     .apple {
-        background:url(../img/green/green_button_apple.png);
+        position: absolute;
     }
 
     .google {
-        background:url(../img/green/green_button_google.png);
+        margin: 0 0 0 160px;
+        position: absolute;
+    }
+
+    .windows {
+        margin: 60px 0 0 0;
+        position: absolute;
     }
 
     .quote:before {
