added about-us description

--- a/views/index.jade
+++ b/views/index.jade
@@ -144,11 +144,11 @@ html
             input(type='submit', value='Subscribe')
         .about-us
           p.margin
-            | Lorem ipsum dolorg sit amettfh, consectetuer adipiscing elit, sed
-            | diam nonummyy nibh euismoed tinciduntt a utd laoreeet dolore magna
-            | aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
-            | exercci manna tatcion ullamcorper suscipit lobortis nisl utae g aliquipt
-            | exe ea commodo consequatq. Duis autem vel eum iriure dolor in hendrerit
+            | Thanks for stopping by. We're Team Pigmaster. We're a group of UCLA Bruins
+            | (and one UCSD Triton) that enjoys creating innovative mobile games. We got our 
+            | start at the Microsoft ImagineCup competition last year, where we placed
+            | 2nd with our game, WordHog. This year we're back and hoping to do bigger & better 
+            | things with CritterCamp. We hope you enjoy it!
         .contact-us
         .social
           a(href='http://www.facebook.com/CritterCampGame', target='_blank')
