--- a/views/index.jade
+++ b/views/index.jade
@@ -62,7 +62,7 @@ html
         .inner.inner-margin_top
           .drop-shadow
             .ribbon
-              h3 New update comming soon
+              h3 New update coming soon
           .drop-shadow
           .facts
             .icon
