added logo to website

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,7 +26,7 @@ html
       #header
         #head
           #logo
-            img(src='img/logo.png', alt='LandingSpace')
+            img(src='img/CritterCampLogo.png', alt='CritterCamp')
         .middle
           #iphone
             #iphone_container
