--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
     // CSS 
     link(rel='stylesheet', href='css/reset.css')
     link(rel='stylesheet', href='css/style.css')
-    link#colortheme(rel='stylesheet', href='css/green.css')
+    link#colortheme(rel='stylesheet', href='css/brown.css')
     //if lt IE 9
       link(rel='stylesheet', type='text/css', href='css/ie.css')
     // Google Web Font 
@@ -52,11 +52,11 @@ html
                       | about to begin!
             #store
               .apple
-                  img(src='img/green/green_button_apple_simple.png')
+                  img(src='img/brown/brown_button_apple_simple.png')
               .google
-                  img(src='img/green/green_button_google_simple.png')
+                  img(src='img/brown/brown_button_google_simple.png')
               .windows
-                  img(src='img/green/green_button_windows_simple.png')
+                  img(src='img/brown/brown_button_windows_simple.png')
       #middle
         #table.wooden-table
         .inner.inner-margin_top
