tweaked location of logo and added favicon

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@
 html
   head
     meta(charset='UTF-8')
-    title LandingSpace
+    title CritterCamp - A Collection of Real-Time Multiplayer Mini-Games
     meta(name='description', content='')
     meta(name='keywords', content='')
     // JS 
@@ -52,10 +52,13 @@ html
                       | about to begin!
             #store
               .apple
+                a(href='http://www.facebook.com/CritterCampGame')
                   img(src='img/brown/brown_button_apple_simple.png')
               .google
+                a(href='http://www.facebook.com/CritterCampGame')
                   img(src='img/brown/brown_button_google_simple.png')
               .windows
+                a(href='http://www.facebook.com/CritterCampGame')
                   img(src='img/brown/brown_button_windows_simple.png')
       #middle
         #table.wooden-table
