added twilight tango to showcase

--- a/views/index.jade
+++ b/views/index.jade
@@ -122,7 +122,7 @@ html
             ul
               li
                 a(href='#')
-                  img(src='img/1.png')
+                  img(src='img/twilight_tango_showcase.png')
               li
                 a(href='#')
                   img(src='img/2.png')
