added coming soon to showcase

--- a/views/index.jade
+++ b/views/index.jade
@@ -116,7 +116,7 @@ html
       .other-stuff-ribbon
         .line.color-first
           .other-stuff-up
-            span Other
+            span Mini
         .other-stuff
           .shelf
             ul
@@ -125,22 +125,22 @@ html
                   img(src='img/twilight_tango_showcase.png')
               li
                 a(href='#')
-                  img(src='img/2.png')
+                  img(src='img/coming_soon_showcase.png')
               li
                 a(href='#')
-                  img(src='img/3.png')
+                  img(src='img/coming_soon_showcase.png')
               li
                 a(href='#')
-                  img(src='img/4.png')
+                  img(src='img/coming_soon_showcase.png')
               li
                 a(href='#')
-                  img(src='img/5.png')
+                  img(src='img/coming_soon_showcase.png')
               li
                 a(href='#')
-                  img(src='img/6.png')
+                  img(src='img/coming_soon_showcase.png')
         .line.color-second
           .other-stuff-down
-            span Stuff
+            span Games
       .inner
         .subscribe
           form
@@ -199,7 +199,7 @@ html
           var text = $('.color-second span').text();
           if(text == "close") {
             $('.other-stuff').slideUp();
-            $('.color-second span').text('stuff');
+            $('.color-second span').text('games');
           } else {
             $('.other-stuff').slideDown();
             $('.color-second span').text('close');
