added twilight tango screenshot in iphone on website

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,13 +33,13 @@ html
             #iphone_container
               ul#iphoneul
                 li#phoneimg0.images
-                  img(src='img/02.png')
+                  img(src='img/twilight_tango_screenshot.png')
                 li#phoneimg1.images
-                  img(src='img/03.png')
+                  img(src='img/twilight_tango_screenshot.png')
                 li#phoneimg2.images
-                  img(src='img/01.png')
+                  img(src='img/twilight_tango_screenshot.png')
                 li#phoneimg3.images
-                  img(src='img/02.png')
+                  img(src='img/twilight_tango_screenshot.png')
           #div
             #text
               #textlength
@@ -48,9 +48,9 @@ html
                     | WELCOME TO CRITTER CAMP
                     br
                     span
-                      | the games are
+                      | join in on the
                       br
-                      | about to begin!
+                      | competitions!
             #store
               .apple
                 a(href='http://www.facebook.com/CritterCampGame')
