temp pink layout + pigmaster logo

--- a/public/css/pink.css
+++ b/public/css/pink.css
@@ -2,7 +2,7 @@
 	/* pink color variation for the landing page */
 
     #head {
-        background:url(../img/pink/pink_head.png);
+        background:url(../img/pink/pigmasterHeader.png);
     }
 
     h1 {
