--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
     // CSS 
     link(rel='stylesheet', href='css/reset.css')
     link(rel='stylesheet', href='css/style.css')
-    link#colortheme(rel='stylesheet', href='css/brown.css')
+    link#colortheme(rel='stylesheet', href='css/pink.css')
     link(rel='icon', type='image/png', href='img/tealpig.png')
     //if lt IE 9
       link(rel='stylesheet', type='text/css', href='css/ie.css')
