needs the header

--- a/public/css/brown.css
+++ b/public/css/brown.css
@@ -2,7 +2,7 @@
     /* Brown color variation for the landing page */
     
     #head {
-        
+        background:url(../img/pigmasterHeader.png);
     }
     
     h1 {
