--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background:url(../img/default_bg.png);
+    background:url(../img/default_bg_light.png);
 }
 
 h1,h2,h3 {
@@ -18,7 +18,7 @@ h1,h2,h3 {
     #header {
         width:100%;
         height:525px;
-        background:url(../img/header_bg.png);
+        background:url(../img/clouds_crop_pig.png);
     }
     
         #head {
