temp website layout

--- a/views/index.jade
+++ b/views/index.jade
@@ -102,7 +102,7 @@ html
               | Critter Camp Hall of Fame.
           .facts-big
             .img
-              img(src='img/pigUp.png')
+              img(src='img/campfire.png')
             h2 discover new camp mini-games
             p
               | Playing the same games over and over
