--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ h1,h2,h3 {
     #header {
         width:100%;
         height:525px;
-        background:url(../img/clouds_crop_pig.png);
+        background:url(../img/header_bg.png);
     }
     
         #head {
