--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -7,7 +7,61 @@ html
     meta(name='keywords', content='')
     // JS 
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
-    script(src='http://code.highcharts.com/highcharts.js')
+    script(src='https://www.google.com/jsapi')
+    script(type='text/javascript')
+      // Load the Visualization API and the piechart package.
+      google.load('visualization', '1.0', {'packages':['corechart']});
+      console.log('blahbalhbalH!!!');
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.setOnLoadCallback(initialize);
+
+      function initialize() {
+        // Replace the data source URL on next line with your data source URL.
+        var query = new google.visualization.Query('localhost:8080/chart/dailystat');
+        
+        // Send the query with a callback function.
+        query.send(handleQueryResponse);
+      }
+
+      function handleQueryResponse(response) {
+        if (response.isError()) {
+          alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
+          return;
+        }
+
+        var data = response.getDataTable();
+        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+        chart.draw(data, { width: 240, height: 180 });
+      }
+
+      /*
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['Mushrooms', 3],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Zucchini', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'How Much Pizza I Ate Last Night',
+                       'width':240,
+                       'height':180};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+      */
     // CSS 
     link(rel='stylesheet', href='css/reset.css')
     link(rel='stylesheet', href='css/metrics.css')
@@ -27,33 +81,7 @@ html
         .inner.inner-margin_top
           .facts
             h2 twilight tango
-            #container(style='width: 100%; height: 400px;')
-              script(type='text/javascript')
-                $(function () { 
-                  $('#container').highcharts({
-                    chart: {
-                        type: 'bar'
-                    },
-                    title: {
-                        text: 'Fruit Consumption'
-                    },
-                    xAxis: {
-                        categories: ['Apples', 'Bananas', 'Oranges']
-                    },
-                    yAxis: {
-                        title: {
-                            text: 'Fruit eaten'
-                        }
-                    },
-                    series: [{
-                        name: 'Jane',
-                        data: [1, 0, 4]
-                    }, {
-                        name: 'John',
-                        data: [5, 7, 3]
-                    }]
-                  });
-                });​
+            #chart_div
           .facts
             h2 jetpack jamboree
             p
