--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -11,7 +11,7 @@ html
     script(type='text/javascript')
       // Load the Visualization API and the piechart package.
       google.load('visualization', '1.0', {'packages':['corechart']});
-      console.log('blahbalhbalH!!!');
+
       // Set a callback to run when the Google Visualization API is loaded.
       google.setOnLoadCallback(initialize);
 
@@ -24,6 +24,7 @@ html
       }
 
       function handleQueryResponse(response) {
+        alert('blahbalhbalH!!!');
         if (response.isError()) {
           alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
           return;
