--- a/public/css/metrics.css
+++ b/public/css/metrics.css
@@ -62,11 +62,15 @@
             }
 
             .facts {
-                width: 240px;
+                width: auto;
                 height: auto;
-                float: left;
                 margin: 0 40px 40px 0;
                 text-align: center;
+            }
+
+            #goldspent {
+                height: 400px;
+                min-width: 400px;
             }
 
                 .facts.last {
